[package]
name = "zig_build"
edition = "2018"
publish = false
version = "0.5.0"


[target.'cfg(all(target_arch = "x86_64", any(linux, unix)))'.dependencies]
zig_build_bin_linux_x86_64 = { path = "../zig_build_bin_linux_x86_64" }

[target.'cfg(all(target_arch = "x86_64", any(windows)))'.dependencies]
zig_build_bin_windows_x86_64 = { path = "../zig_build_bin_windows_x86_64" }

[target.'cfg(all(target_arch = "x86_64", any(macos)))'.dependencies]
zig_build_bin_macos_x86_64 = { path = "../zig_build_bin_macos_x86_64" }

[dependencies]
bindgen = "0.53.1"
cbindgen = "0.13.1"

